# YTTWrittenStory

./: .env  .gitignore  README.md  cli.py  main.py  pyproject.toml  test_txt.txt
config/: gemini_settings.yaml  llm_settings.yaml
src/ingest/: storage.py  youtube_transcript.py
src/llm/: gemini_client.py  ollama_client.py  prompts.py
src/output/: markdown_writer.py
src/pipeline/: translate_edit_structure.py
src/preprocess/: chunker.py  cleaner.py  download_tokenizer.py
src/utils/: logging.py
